# TextSummarizer

./: .env.example  CONTRIBUTING.md  GETTING_STARTED.md  Makefile  PORTFOLIO_SUMMARY.md  PRE_PUBLISH_CHECKLIST.md  README.md  TESTING_SUMMARY.md  docker-compose.yml  pytest.ini  requirements-test.txt  run_tests.sh
.github/workflows/: ci.yml
api_gateway/: Dockerfile  db.py  main.py  pyproject.toml  redis_client.py  schemas.py  settings.py
api_gateway/static/: index.html
docs/: SAMPLE_TEXTS.md  SCREENSHOTS.md
tests/: README.md  conftest.py  test_api.py  test_integration.py  test_repositories.py  test_worker.py
worker/: Dockerfile  main.py  pyproject.toml  redis_client.py  settings.py
worker/domain/: factory.py  interfaces.py
worker/domain/repositories/: __init__.py  huggingface.py  local_t5.py  openai_api.py
